--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -184,8 +184,9 @@ jobs:
         run: |
           ./autogen.sh
           ls /mingw64/lib
-          CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64 --libdir=/mingw64/lib
-          make -j3
+          env
+#          CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64 --libdir=/mingw64/lib
+#          make -j3
 #       - name: Run
 #         run: |
 #           ./src/suricata --build-info
