--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -185,6 +185,7 @@ jobs:
           ./autogen.sh
           ls /mingw64/lib
           CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64
+          cd src
           make V=1
 #       - name: Run
 #         run: |
