--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -205,3 +205,8 @@ jobs:
         with:
           name: makeCmd
           path: ./src/1.txt
+      - name: make command
+        uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
+        with:
+          name: makeCmd
+          path: ./src/1.txt
