--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -181,7 +181,7 @@ jobs:
           ls /mingw64/lib
           CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64 --libdir=/mingw64/lib
           make -n>1.txt
-          make -j3
+#          make -j3
 #       - name: Run
 #         run: |
 #           ./src/suricata --build-info
@@ -190,18 +190,4 @@ jobs:
 #           PATH="$PATH:$(pwd)" python3 ./suricata-verify/run.py -q
 #       - run: make install
 #       - run: suricata-update -V
-      - name: Uploading libsuricata_c
-        uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
-        with:
-          name: libsuricata_c.a
-          path: ./src/libsuricata_c.a
-      - name: Uploading libsuricata_rust
-        uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
-        with:
-          name: libsuricata_rust.a
-          path: ./rust/target/release/libsuricata_rust.a
-      - name: make command
-        uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
-        with:
-          name: 1.txt
-          path: ./src/1.txt
+
