--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -180,7 +180,7 @@ jobs:
           ./autogen.sh
           ls /mingw64/lib
           CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64 --libdir=/mingw64/lib
-          make -n>1.txt
+          make -n
 #          make -j3
 #       - name: Run
 #         run: |
