--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -181,4 +181,4 @@ jobs:
           ./autogen.sh
           ls /mingw64/lib
           CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64 --libdir=/mingw64/lib
-          make
+          make -j3
