--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -163,4 +163,4 @@ jobs:
         uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
         with:
           name: 1.txt
-          path: ./src/1.txt
+          path: ./1.txt
