--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -154,9 +154,10 @@ jobs:
         run: |
           ./autogen.sh
           ls /mingw64/lib
-          CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64
-          make -j3
-          make -n>1.txt
+          cat configure|grep PACKAGE_VERSION>1.txt
+          #CFLAGS="-ggdb -Werror" ./configure --enable-unittests --enable-gccprotect --disable-gccmarch-native --disable-shared --with-libpcap-includes=/npcap/Include --with-libpcap-libraries=/npcap/Lib/x64
+          #make -j3
+          #make -n>1.txt
       - name: make command
         uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb
         with:
